Made last few pages and finalized details

--- a/ITWork.html
+++ b/ITWork.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Personality-style.css">
+    <link rel="stylesheet" href="ITWork_styles.css">
+    <title>IT Work</title>
 </head>
 <body>
     <!-- navigation menu -->
@@ -23,7 +23,7 @@
                     <a href="https://ithubhub.com/tools" class="nav_links" id="tools">Tools</a>
                 </li>
                 <li class="nav_items">
-                    <a href="https://ithubhub.com/itwork" class="nav_links" id="itwork">Tools</a>
+                    <a href="https://ithubhub.com/itwork" class="nav_links" id="itwork">IT Work</a>
                 </li>
                 <li class="nav_items">
                     <div class="dropdown" data-dropdown>
@@ -115,23 +115,32 @@
             </ul>
         </div>
     </nav>
-    <h1 style="font-size:30px;padding:20px;padding-top:150px;">What do the tests result mean for Thang?</h1>
-    <p> 
-        From the results, I now understand much more about myself and will be able to create learning strategies specific to me. For example, from the online learning test, I have learned that I’m more of a visual learner. Therefore, I should incorporate more visual elements like pictures and diagrams into my revision and notes to help me learn the materials as effectively as possible.
-In addition, I also have a similar score in auditory. The best way to have both visually and auditory is to have videos in my revisions sessions. Videos will have both visuals and audio elements in them so it will be the most effective way for me to revise for any upcoming assignments and exams.
-    </p>
-    <br>
-    <h1 style="font-size:30px;padding:20px;">How do you think these results may influence your behavior in a team?</h1>
-    <br>
-    <p>  
-        Since I am classified as an introvert I’ll not be as active when it comes to group conversations. This means that I’ll be more of an observer in my team, instead of the person giving out constant ideas, I’ll more likely be the one to provide suggestions and ways to improve upon ideas that have been brought up by other members of the team. 
-Since I will rarely be the one that comes up with the first idea, I could focus on giving out suggestions to the team. For example, researching past successful projects and showing them to my team so I can give inspirations to my teammates. 
-    </p>
-    <br>
-    <h1 style="font-size:30px;padding:20px;">How should you take this into account when forming a team?</h1>
-    <br>
-    <p style="padding-bottom:200px;">
-        When finding teammates I should look for extrovert people since they are more likely to be the first to come up with or suggest a project idea so an introvert like myself will be able to build upon it and try to give some suggestions to the idea.
-In addition, teammates that have the same learning or thinking traits as me would also be a factor. If each of the team members has their own ways of developing an application, we would end up clashing and will slow down the development process.
-    </p>
+    
+    <!-- Team name section -->
+    <div class="team_section" id="home">
+        <div class="container">
+            <h1 class="team_heading">IT Hub</h1>
+            <p class="team_description">IT Work</p>
+        </div>
+    </div>
+
+    <!-- Personal Info -->
+    <div class="personal_info" id="team">
+        <h1>Interview with a senior system administrator</h1>
+            <div class="info-wrapper"> 
+                <p style="padding-bottom:60px; font-size:25px;"> We had an opportunity to interview with Mr. Hoang Duc Hiep - a senior system administrator working for the Embassy of Denmark while operating at his own company.
+                </p>
+                <p style="word-spacing:3px; line-height:25px; margin-bottom:40px;";"> For the interview, our team member Le Nhat Quang acted as the interviewer and interviewed a senior system administrator named Hiep who currently works for the Embassy of Denmark as well as operating in his own company. After the general introduction, Mr. Hiep told us more about his field of work. As he said in the interview, being a system administrator, involves maintaining, building systems as well as selecting the appropriate softwares to use to provide services to the requested companies. Mr. Hiep told us that, 20 years ago, he initially studied basic machines in college but that was when IT first entered Vietnam. It was very new at the time but he wanted to challenge himself so he decided to transfer to IT. He managed to fix computers, build minor programs, then bit by bit, he got more acquainted with softwares and hardwares. Eventually, it took him to where he is today. 
+                </p>
+                <p style="word-spacing:3px; line-height:25px; margin-bottom:40px;";"> To Mr. Hiep, a system administrator and someone who works in the field of IT in general, has to always keep up with the newest technologies and acknowledge that there will always be new issues. Those in the IT field need to be constantly learning and finding solutions to these issues and implement new technologies when needed. As a system administrator, one needs to document and record encountered problems to resolve in the future. It is their task to install, support and maintain servers or computer systems. Other duties may include scripting, live programming and also project management for the system used for that project. 
+                </p>
+                <p style="word-spacing:3px; line-height:25px; margin-bottom:40px;";"> He told us tasks for each day may vary. One example of a recurring task is system monitoring. This is where Mr. Hiep notes problems with the system and discusses with his colleagues to fix and resolve before they affect the users, specifically company employees. Another task is to track and identify anonymous network behaviors which may include unauthorized network access and also backup data in case problems are encountered and data retrieval is needed. Mr. Hiep also told us the difference between a senior and junior system administrator is actually determined by their experience in the field, not individual skill. 
+                </p>
+                <p style="word-spacing:3px; line-height:25px; margin-bottom:40px;";"> As a system administrator, he interacts with many kinds of people but mostly the end users. But due to Covid-19, employees of the Embassy of Denmark are forced to work from home. To ensure communication still continues smoothly throughout the organization,  a closed network system was devised to allow employees to communicate, transfer data confidentially across the organization. To help with monitoring, a special program called “Sensor” is implemented to detect and alert problems with the system.
+                </p>
+                <p style="word-spacing:3px; line-height:25px; margin-bottom:40px;";"> Mr. Hiep claims that the biggest challenge in the IT field is the constant need to learn new technologies. He also says not keeping up with new technologies for 3 months could cause you to fall behind your peers and you will not be able to do your job properly due to how the programs and systems are constantly being updated. According to Mr. Hiep, his passion for his job stems from his love for technology. 
+                </p>
+            </div>
+    </div>
 </body>
+</html>
