--- a/feedback_Hoang.html
+++ b/feedback_Hoang.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Personality-style.css">
+    <link rel="stylesheet" href="feedback_styles.css">
+    <title>AI and Machine Learning</title>
 </head>
 <body>
     <!-- navigation menu -->
@@ -115,23 +115,25 @@
             </ul>
         </div>
     </nav>
-    <h1 style="font-size:30px;padding:20px;padding-top:150px;">What do the tests result mean for Thang?</h1>
-    <p> 
-        From the results, I now understand much more about myself and will be able to create learning strategies specific to me. For example, from the online learning test, I have learned that I’m more of a visual learner. Therefore, I should incorporate more visual elements like pictures and diagrams into my revision and notes to help me learn the materials as effectively as possible.
-In addition, I also have a similar score in auditory. The best way to have both visually and auditory is to have videos in my revisions sessions. Videos will have both visuals and audio elements in them so it will be the most effective way for me to revise for any upcoming assignments and exams.
-    </p>
-    <br>
-    <h1 style="font-size:30px;padding:20px;">How do you think these results may influence your behavior in a team?</h1>
-    <br>
-    <p>  
-        Since I am classified as an introvert I’ll not be as active when it comes to group conversations. This means that I’ll be more of an observer in my team, instead of the person giving out constant ideas, I’ll more likely be the one to provide suggestions and ways to improve upon ideas that have been brought up by other members of the team. 
-Since I will rarely be the one that comes up with the first idea, I could focus on giving out suggestions to the team. For example, researching past successful projects and showing them to my team so I can give inspirations to my teammates. 
-    </p>
-    <br>
-    <h1 style="font-size:30px;padding:20px;">How should you take this into account when forming a team?</h1>
-    <br>
-    <p style="padding-bottom:200px;">
-        When finding teammates I should look for extrovert people since they are more likely to be the first to come up with or suggest a project idea so an introvert like myself will be able to build upon it and try to give some suggestions to the idea.
-In addition, teammates that have the same learning or thinking traits as me would also be a factor. If each of the team members has their own ways of developing an application, we would end up clashing and will slow down the development process.
-    </p>
+
+    <!-- Team name section -->
+    <div class="team_section" id="home">
+        <div class="container">
+            <h1 class="team_heading">IT Hub</h1>
+            <p class="team_description">Feedback</p>
+        </div>
+    </div>
+
+    <!-- Personal Info -->
+    <div class="personal_info" id="team">
+        <h1>Tran Viet Hoang</h1>
+                <p style="padding-left:50px; padding-right:50px; word-spacing:3px; line-height:25px; margin-bottom:40px;";"> After three weeks of working together, I've seen that our teammate, Minh, who is the group's leader, has really guided us through this job. He is really effective at assisting others and reminding us of the tasks that we need to accomplish. By providing us tasks to accomplish every day, we would never have to cram on the project on the very last day, which would be inefficient and result in bad performance. Which I feel was really significant and he's the one who initiated having regular meetings for us to discuss so that we could assist each other out and have a better understanding of what we needed to achieve since communication is vital. Our second member, Thang, who I feel is really helpful since he explained to us a lot about website development. He built up the website layout and even showed us how to do it. Therefore,  I've learned a lot from him over the last three weeks, and I truly appreciate him showing us around and assisting us with the website. Thang was also a fantastic teammate since he never missed a meeting and he also had great communication because it was incredibly easy to comprehend what his proposal was and what he was going to accomplish next. My report on our last colleague, Quang, is that over the past three weeks, I believe he has been very consistent with his work, and because he has been studying at RMIT for three years, he frequently comes up with advice on our work. Having a lot of experience, his work is always explicit and helpful. He also had a broad knowledge of technology, which made his reports on the technology section very interesting to readers. Overall, I believe I performed admirably in this project, and I will need to work hard to develop my abilities and knowledge in this area, as I am now lacking in both. I will also need to stop spending time on jobs that might be accomplished quickly.
+                </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="IT_Tech_Script.js"></script>
+
 </body>
+</html>
