--- a/feedback_Minh.html
+++ b/feedback_Minh.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Personality-style.css">
+    <link rel="stylesheet" href="feedback_styles.css">
+    <title>AI and Machine Learning</title>
 </head>
 <body>
     <!-- navigation menu -->
@@ -115,23 +115,32 @@
             </ul>
         </div>
     </nav>
-    <h1 style="font-size:30px;padding:20px;padding-top:150px;">What do the tests result mean for Thang?</h1>
-    <p> 
-        From the results, I now understand much more about myself and will be able to create learning strategies specific to me. For example, from the online learning test, I have learned that I’m more of a visual learner. Therefore, I should incorporate more visual elements like pictures and diagrams into my revision and notes to help me learn the materials as effectively as possible.
-In addition, I also have a similar score in auditory. The best way to have both visually and auditory is to have videos in my revisions sessions. Videos will have both visuals and audio elements in them so it will be the most effective way for me to revise for any upcoming assignments and exams.
-    </p>
-    <br>
-    <h1 style="font-size:30px;padding:20px;">How do you think these results may influence your behavior in a team?</h1>
-    <br>
-    <p>  
-        Since I am classified as an introvert I’ll not be as active when it comes to group conversations. This means that I’ll be more of an observer in my team, instead of the person giving out constant ideas, I’ll more likely be the one to provide suggestions and ways to improve upon ideas that have been brought up by other members of the team. 
-Since I will rarely be the one that comes up with the first idea, I could focus on giving out suggestions to the team. For example, researching past successful projects and showing them to my team so I can give inspirations to my teammates. 
-    </p>
-    <br>
-    <h1 style="font-size:30px;padding:20px;">How should you take this into account when forming a team?</h1>
-    <br>
-    <p style="padding-bottom:200px;">
-        When finding teammates I should look for extrovert people since they are more likely to be the first to come up with or suggest a project idea so an introvert like myself will be able to build upon it and try to give some suggestions to the idea.
-In addition, teammates that have the same learning or thinking traits as me would also be a factor. If each of the team members has their own ways of developing an application, we would end up clashing and will slow down the development process.
-    </p>
+
+    <!-- Team name section -->
+    <div class="team_section" id="home">
+        <div class="container">
+            <h1 class="team_heading">IT Hub</h1>
+            <p class="team_description">Feedback</p>
+        </div>
+    </div>
+
+    <!-- Personal Info -->
+    <div class="personal_info" id="team">
+        <h1>Nguyen Bao Minh</h1>
+                <p style="padding-left:50px; padding-right:50px; word-spacing:3px; line-height:25px; margin-bottom:40px;";"> As for myself, I think I performed well as a teammate. I was responsible with my tasks and usually finished them early. Before, I was rather shy and was a little scared to speak my thoughts. But I managed to overcome that fear by the halfway point of the project. Perhaps it was because I had become familiar with the group. I hope to have the courage to do the same when I am assigned to a different group in the future but not take as much time to do so.
+                </p>
+                <p style="padding-left:50px; padding-right:50px; word-spacing:3px; line-height:25px; margin-bottom:40px;";"> I see Hoang as a highly responsible teammate and performs his tasks well. His inputs were very helpful throughout the project. There is not much to criticize as I did not encounter any problems when working with him. I look forward to working with him again in the future.
+                </p>
+                <p style="padding-left:50px; padding-right:50px; word-spacing:3px; line-height:25px; margin-bottom:40px;";">Thang is a great teammate. He performs his tasks well. He acts as a great teammate but I wish he would give us more input during our meetings and discussions. Thanks to his ability as a quick learner, he created the home page for our website and we were able to build the rest of the pages based on his. Overall, I can see myself working with him again in the future. 
+                </p>
+                <p style="padding-left:50px; padding-right:50px; word-spacing:3px; line-height:25px; margin-bottom:40px;";">Despite IT not being his major, Quang still gave his all in this project. Quang is an excellent teammate and a great interviewer. Due to his time and experience at RMIT, his inputs are sharp and highly valuable to our team.
+                </p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="IT_Tech_Script.js"></script>
+
 </body>
+</html>
